# BackendApi/models/pimd/agency.js
@@ -1,22 +1,24 @@
-/** @format */
-
 module.exports = (sequelize, DataTypes) => {
   const agency = sequelize.define(
     "agency",
     {
-      category: {
-        type: DataTypes.STRING(20), 
+      agencyid: {
+        type: DataTypes.TEXT,
         allowNull: false,
         primaryKey: true,
       },
+      agency_name: {
+        type: DataTypes.STRING(20),
+        allowNull: false,
+      },
       name: {
-        type: DataTypes.STRING(40), 
+        type: DataTypes.STRING(40),
         allowNull: false,
       },
       createdDate: {
         type: DataTypes.DATE,
         allowNull: false,
-        defaultValue: DataTypes.NOW
+        defaultValue: DataTypes.NOW,
       },
     },
     {
@@ -25,5 +27,14 @@ module.exports = (sequelize, DataTypes) => {
       freezeTableName: true,
     }
   );
+
+  agency.associate = (models) => {
+    agency.belongsTo(models.agency, {
+      foreignKey: "agencyid",
+      targetKey: "agencyid",
+      constraints: true,
+    });
+  };
+
   return agency;
 };
